@@ -322,11 +322,13 @@ class depgraph:
 		#the following is so we have an empty vartree (used in emerge update calculations)
 		self.emptytree=portage.vartree("/",virts,portage.db["/"]["vartree"])
 		self.emptytree.tree={}
+		self.emptytree.root=None
 		if "--emptytree" in myopts:
-			portage.db["/"]["vartree"].root=None
 			portage.db["/"]["vartree"].tree=self.emptytree.tree
 			portage.db["/"]["vartree"].populated=1
-			portage.db["/"]["vartree"].inject("virtual/glibc-1.0")
+			portage.db["/"]["vartree"].inject("sys-libs/glibc-1.0")
+			portage.db["/"]["vartree"].root=None
+			portage.db["/"]["vartree"].virtual={"virtual/glibc":"sys-libs/glibc"}
 		self.outdatedpackages=[]
 
 	def create(self,mybigkey,myparent=None,addme=1):
@@ -347,9 +349,9 @@ class depgraph:
 					self.digraph.addnode(mybigkey,myparent)
 			return 1
 		mytype,myroot,mykey=string.split(mybigkey)
-		if "--noreplace" in self.myopts:
+		if "--noreplace" in self.myopts or "--update" in self.myopts:
 			if portage.db[myroot]["vartree"].exists_specific(mykey):
-				print "\n>>>",mykey,"already merged in",myroot+", skipping...\n"
+				#already merged, skip.
 				return 1
 		if mytype=="binary":
 			if not portage.db[portage.root]["bintree"].exists_specific(mykey):
@@ -483,10 +485,6 @@ class depgraph:
 			sys.exit(1)
 			#return None
 
-		# handle filtering of virtual deps for the rebuild action
-		#if self.myaction=="--rebuild" and myeb[0:len("virtual")]=="virtual":
-		#	return None
-		
 		if mydep[0]=="!":
 			myk="blocks "+myroot+" "+myeb
 		else:
@@ -762,10 +760,6 @@ elif "--help" in myopts:
 		print "              "+bold("<=sys-devel/binutils-2.11.92.0.12.3-r1")+" matches"
 		print "                  binutils-2.11.90.0.7 and binutils-2.11.92.0.12.3-r1"
 		print
-		print "       "+green("update")+" ("+green("-u")+" short option)"
-		print "              Updates packages that are part of the base system profile to the"
-		print "              most recent versions available."
-		print 
 		print "       "+green("search")+" ("+green("-s")+" short option)"
 		print "              searches for matches of the supplied string in the current local"
 		print "              portage tree. The search string is a regular expression."
@@ -779,6 +773,17 @@ elif "--help" in myopts:
 		print "                  list all available packages "
 		print
 		print turquoise("Options:")
+		print "       "+green("--update")+" ("+green("-u")+" short option)"
+		print "              Updates packages that are part of the base system profile to the"
+		print "              most recent versions available.  You can also do \"emerge"
+		print "              --update world\" to update things in your world profile,"
+		print "              including dependents."
+		print 
+		print "       "+green("--oneshot")
+		print "              Don't record packages specified on the command-line in the world"
+		print "              profile.  This will prevent them from being automatically updated"
+		print "              in the future via an \"emerge --update world\""
+		print 
 		print "       "+green("--autoclean")+" ("+green("-a")+" short option)"
 		print "              emerge normally cleans out the package-specific temporary"
 		print "              build directory before it starts the building a package.  With"
